fix dark mode accordion, add info to solos

--- a/src/assets/styles/components/_tables.scss
+++ b/src/assets/styles/components/_tables.scss
@@ -64,6 +64,10 @@
             @apply divide-none;
         }
     }
+
+    &:first-child {
+        @apply dark:bg-gray-700 dark:text-white #{!important};
+    }
 }
 
 .table-flex {
